can log in, need to fix other errors and map not showing up

--- a/haupt.brandon/css/app.css
+++ b/haupt.brandon/css/app.css
@@ -232,7 +232,7 @@ li {
 
 /* -------------------------- Map Page ----------------------- */
 
-.mapimage {
+.map {
   object-fit: cover;
   height: calc(100vh - 100px);
   width: 100vw;
